fix(navigation): remove overflow

--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,6 +1,6 @@
 .Nav {
     position       : absolute;
-    width          : 100%;
+    width          : 100vw;
     margin         : 0;
     display        : flex;
     align-items    : center;
