--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  margin    : 0;
+  padding   : 0;
+}
+
 html {
   font-size: 62.50%;
 }
@@ -8,7 +16,4 @@ body {
   -webkit-font-smoothing : antialiased;
   -moz-osx-font-smoothing: grayscale;
   color                  : rgb(117, 117, 117);
-  box-sizing             : border-box;
-  margin                 : 0;
-  padding                : 0;
 }
